--- a/journalApp/src/main/resources/application.properties
+++ b/journalApp/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://insh007:pTNObsADndWTz3nY@cluster0.rq5tbio.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
